@@ -3,9 +3,6 @@
 # Where in the filesystem to place the device nodes
 udev_root="@udevdir@"
 
-# The name and location of the udev database.
-udev_db="@udevdir@/.udevdb"
-
 # The name and location of the udev rules file(s).
 udev_rules="@configdir@/rules.d"
 
